# MCP-Google-Ads

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: EXAMPLES.md  FAQ.md  SAFETY.md  SETUP.md  TOOLS.md
src/google_ads_mcp/: __init__.py  audit.py  auth.py  client.py  config.py  context.py  errors.py  safety.py  server.py
src/google_ads_mcp/tools/: __init__.py  accounts.py  ad_groups.py  ads.py  assets.py  audiences.py  bidding.py  budgets.py  bulk.py  campaign_types.py  campaigns.py  conversions.py  keywords.py  performance_max.py  reporting.py  targeting.py
tests/: conftest.py  test_assets_tools.py  test_audiences_tools.py  test_bulk_tools.py  test_campaign_types_tools.py  test_client_helpers.py  test_image_promotion_assets.py  test_mutate_method_name.py  test_performance_max_tools.py  test_safety.py  test_targeting_tools.py
